--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -1,7 +1,7 @@
 @import 'bootstrap-variables';
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
-
+@import '~ng-zorro-antd/ng-zorro-antd';
 /* ==============================================================
 Bootstrap tweaks
 ===============================================================*/
