--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -40,7 +40,7 @@
                             <span class="btn-rounded align-middle">
                                 <fa-icon icon="rocket" size="2x" fixedWidth="true"></fa-icon>
                             </span>
-                            <span class="align-middle h5">Create Application</span>
+                            <span class="align-middle h5">创建应用</span>
                         </a>
                     </li>
                     <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" *ngSwitchCase="true">
@@ -48,7 +48,15 @@
                             <span class="btn-rounded align-middle">
                                 <fa-icon icon="object-group" size="2x" fixedWidth="true"></fa-icon>
                             </span>
-                            <span class="align-middle h5">Design Entities</span>
+                            <span class="align-middle h5">设计实体</span>
+                        </a>
+                    </li>
+                    <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" *ngSwitchCase="true">
+                        <a class="nav-link text-primary mt-3" routerLink="/design-field">
+                            <span class="btn-rounded align-middle">
+                                <fa-icon icon="object-group" size="2x" fixedWidth="true"></fa-icon>
+                            </span>
+                            <span class="align-middle h5">设计字段</span>
                         </a>
                     </li>
                     <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" *ngSwitchCase="true">
