--- a/src/main/webapp/app/home/field-metadata/field-metadata.component.html
+++ b/src/main/webapp/app/home/field-metadata/field-metadata.component.html
@@ -1,67 +1,11 @@
-<div>
-    <h2>
-        <fa-icon [icon]="'object-group'"></fa-icon>&nbsp;<span>创建模块</span>
-        <a href="field-studio/" class="btn btn-primary float-right jh-create-entity create-field-metadata ml-2">
-            <fa-icon [icon]="'bolt'"></fa-icon>
-            <span>
-            新增
-            </span>
-        </a>
-        <button class="btn btn-info float-right" (click)="loadAll()">
-                <fa-icon [icon]="'sync'" [spin]="jdlRefresh"></fa-icon>
-            <span>
-            查询
-            </span>
-        </button>
-    </h2>
-    <jhi-alert></jhi-alert>
-    <p>
-        <i>The JDL Studio is a graphical tool to design your entities using the
-          <a href="https://www.jhipster.tech/field/" target="_blank">JHipster Domain Language (JDL)</a>.
-        </i>
-    </p>
-    <div class="table-responsive" *ngIf="fieldMetadata">
-        <table class="table table-striped">
-            <thead>
-            <tr jhiSort jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="loadAll.bind(this)">
-            <th jhiSortBy="name"><span>Name</span> <fa-icon [icon]="getSortingIcon('name')"></fa-icon></th>
-            <th jhiSortBy="updatedDate"><span>Last update</span> <fa-icon [icon]="getSortingIcon('updatedDate')"></fa-icon></th>
-            <th><span></span></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngIf="fieldMetadata.length === 0">
-                <td colspan="4">
-                    <span><i>No JDL model created yet</i></span>
-                </td>
-            </tr>
-            <tr *ngFor="let fieldMetadata of fieldMetadata ;trackBy: trackId">
-                <td>{{fieldMetadata.name}}</td>
-                <td>{{fieldMetadata.updatedDate | date:'medium'}}</td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <a href="field-studio/#!/view/{{fieldMetadata.id}}" class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="hidden-md-down">Open</span>
-                        </a>
-                        <button type="submit"
-                                [routerLink]="['/design-entities-apply/'+ fieldMetadata.id]"
-                                replaceUrl="true"
-                                class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'check'"></fa-icon>
-                            <span class="hidden-md-down">Apply</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/design-entities-delete/'+ fieldMetadata.id]"
-                                replaceUrl="true"
-                                class="btn btn-danger btn-sm">
-                            <fa-icon [icon]="'trash'"></fa-icon>
-                            <span class="hidden-md-down">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
+<page-header [title]="'Page Name'"></page-header>
+<nz-card>
+  <sf
+    mode="search"
+    [schema]="searchSchema"
+    [formData]="params"
+    (formSubmit)="st.reset($event)"
+    (formReset)="st.reset(params)"
+  ></sf>
+  <st #st [data]="url" [columns]="columns" [req]="{ params: params }"></st>
+</nz-card>
